# tokimo-app-helloworld

./: Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
migrations/: 0001_init.sql
src/: app_server.rs  assets.rs  cli.rs  data_plane.rs  db.rs  handlers.rs  lib.rs  main.rs
src/bus_clients/: jobs.rs
src/bus_services/: person.rs
src/db/: mod.rs
src/db/migration/: m20260521_000001_create_items_table.rs  mod.rs
src/db/repos/: face_cache_repo.rs  items_repo.rs  person_repo.rs
src/handlers/: mod.rs
tests/: export_bindings.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: index.css  index.tsx  viewer-demo-samples.ts  viewer-demo.tsx
ui/src/demos/: JobsDemos.tsx  MediaDemos.tsx
ui/src/i18n/: index.ts
