[package]
name        = "tokimo-app-helloworld"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.85"
license     = "MIT OR Apache-2.0"
description = "Reference Tokimo app: demonstrates the tokimo-bus client SDK."
repository  = "https://github.com/tokimo-lab/tokimo-app-helloworld"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "e4cb3eb067225d52a2a1b094b79a0584b7923939" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "e4cb3eb067225d52a2a1b094b79a0584b7923939" }

tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
